--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuetify": "^2.6.10"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@nuxtjs/vuetify": "^1.12.3"
   }
 }
